<resources>
    <string name="app_name">FlickrApp</string>
    <string name="insert_string">Search..</string>
    <string name="button_search_str">Search</string>
    <string name="button_search_last">Last Uploaded Pic</string>
    <string name="button_search_top">Popular Pic</string>
    <string name="share_button">Share</string>
    <string name="info_button">Info</string>
    <string name="error_empty_field">Invalid input</string>
    <string name="empty_results">No image found</string>
    <string name="empty_comments">No comment found</string>
    <string name="app_date">November 2017</string>
    <string name="app_version">Version 1.0</string>
    <string name="network_warning">No network connection available</string>
    <string name="storage_permission_denied">Permission denied to read and write on external storage</string>
    <string name="storage_permission_granted">Permission granted to read and write on external storage</string>
    <string name="share_title">Share with..</string>
    <string name="share_mess">Shared by FlickApp</string>
    <string name="wait_title">Please wait</string>
    <string name="wait_mess">Loading..</string>
    <string name="context_menu_title">Options:</string>
    <string-array name="context_menu">
        <item>Share</item>
        <item>Other pic by</item>
    </string-array>
</resources>