<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.univr.android.flickrapp.view.SearchFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/insert_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".80"
            android:hint="@string/insert_string"/>

        <Button
            android:id="@+id/search_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:text="@string/button_search_str" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/search_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/button_search_last" />

        <Button
            android:id="@+id/search_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/button_search_top" />

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" />

</LinearLayout>